samples/_failures_safe/1761603575_eeb39f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a870aab.c: In function ‘main’:
./samples/SAFE/__tmp_6a870aab.c:169:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  169 |         enum State new
      |              ^~~~~
./samples/SAFE/__tmp_6a870aab.c:169:14: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6a870aab.c:169:14: error: expected declaration or statement at end of input
